--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
   <footer >
       <div class="footer-content">
           <h3 class="titulo"><b>Este site foi criado por: </b></h3>
-          <h3 class="subtitulo">Gabriel Cordeiro Barroso Teles</h3>
+          <h3 class="subtitulo">
+            Gabriel Cordeiro
+            <br>Eduardo Lima
+            <br>Davy Peterson
+            <br>Miguel Antonio
+            <br>Gabriel Sam
+          </h3>
           
       </div>
   </footer>
