--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <br>Davy Peterson
             <br>Miguel Antonio
             <br>Gabriel Sam
+            <br>Caue Vitor
           </h3>
           
       </div>
